# SimpleWordle

./: Cargo.toml  HONOR-CODE.md  README.md
src/: main.rs  wordle_solver.rs
tests/: basic_requirements.rs
