[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde = "1.0.144"
serde_json = "1.0"
serde_derive = "1.0.144"
console = "0.15"
rand = "0.8.5"
rand_core = "0.3.0"
clap = "3.2.17"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"